# vmcai2020-inv-syn-benchmarks

./: .gitignore  BuildAll.sh  CleanAll.sh  Makefile  README.md  customized_timeout.py  runAES-Pico-GB.py  runAll.py  runGrain.py  runRC.py  runSP.py
AES/: CMakeLists.txt
AES/app/: main-cvc4sy.cc  main-grain.cc  main-pdrabc.cc  main-pdrchc.cc  main-relchc.cc
AES/grm/: aes.gmr
AES/include/: aes_ila.h  artifact_utility.h  env.h
AES/refinement/: ref-rel-inst-cond-uaes.json  ref-rel-var-map-uaes.json
AES/src/: aes_child.cc
AES/verilog/: aes_top.v
GB/: CMakeLists.txt
GB/app/: main-cvc4sy.cc  main-grain.cc  main-pdrchc.cc
GB/include/: artifact_utility.h  env.h
GB/src/: artifact_utility.cc
GB/verification/Cvc4Sy/: result-stat.txt
GB/verification/Cvc4Sy/1/: run.sh
GB/verification/Grain/: result-stat.txt
GB/verification/Grain/2/: gr.gmr  inv_grm  run.sh
GB/verification/PdrAbc/: .gitignore
GB/verification/PdrChc/: result-stat.txt
GB/verification/PdrChc/0/: wrapper.smt2
GB/verification/PdrChc/1/: wrapper.smt2
GB/verification/PdrChc/2/: wrapper.smt2
GB/verification/PdrChc/3/: wrapper.smt2
GB/verification/PdrChc/4/: wrapper.smt2
GB/verification/PdrChc/5/: wrapper.smt2
GB/verification/PdrChc/6/: wrapper.smt2
Pico/: .gitignore  CMakeLists.txt
Pico/app/: main-cvc4sy.cc  main-grain.cc  main-pdrabc.cc  main-pdrchc.cc  main-relchc.cc
Pico/cexs/: 0.cex  0.vcd  1.cex  1.vcd  2.cex  2.vcd  3.cex  3.vcd  4.cex  4.vcd  5.cex  5.vcd  6.cex  6.vcd  7.cex  7.vcd  8.cex  8.vcd
Pico/grm/: pico.gmr
Pico/include/: riscvIla.hpp
Pico/refinement/: cond.json  vmap.json
Pico/smt/: __design_smt.smt2
Pico/src/: artifact_utility.cc  riscvIla.cc
Pico/verification/: .gitignore
Pico/verilog/: picorv32.v
RC/: CMakeLists.txt  buildAll.sh
RC/app/: main-cvc4sy.cc  main-grain.cc  main-pdrabc.cc  main-pdrchc.cc  main-relchc.cc
RC/grm/: rc.gmr
RC/include/: artifact_utility.h  env.h  rc_ila.h
RC/src/: artifact_utility.cc  rc_ila.cc
SP/: CMakeLists.txt
SP/app/: main-cvc4sy.cc  main-grain.cc  main-pdrabc.cc  main-pdrchc.cc  main-relchc.cc
SP/grm/: sp.gmr
SP/include/: sp_ila.h
SP/src/: artifact_utility.cc  sp_ila.cc
configs/: CMakeLists.txt  local-artifact.cfg  local.cfg
test/: .gitignore  CMakeLists.txt  z3-version.txt
test/app/: main-test.cc
test/cosa-test/: problem.txt  rst.ets  run.sh  wrapper.v
test/include/: env.h.in
